<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@mipmap/medium_btn"
       >
    <TextView
        android:id="@+id/restart_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/are_you_sure_to_restart"
        android:textSize="18sp"
        style="@style/mainTextStyle"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"/>
    <Button
        style="@style/mainButtonStyle"
        android:id="@+id/restart_yesBtn"
        android:layout_width="50dp"
        android:layout_height="30dp"
        android:background="@drawable/my_btn"
        android:text="@string/yes"
        android:layout_gravity="bottom|start"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="40dp"/>
    <Button
        style="@style/mainButtonStyle"
        android:id="@+id/restart_noBtn"
        android:layout_width="50dp"
        android:layout_height="30dp"
        android:background="@drawable/my_btn"
        android:text="@string/no"
        android:layout_gravity="bottom|end"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="40dp"/>
</FrameLayout>