<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="150dp"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:background="@mipmap/rectangle">
        <TextView
            style="@style/mainTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about_developers"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_gravity="center"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="30dp">
            <TextView
                style="@style/mainTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/code"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:layout_marginStart="10dp"/>
            <TextView
                style="@style/mainTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Maxim Vasilevsky"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:layout_marginStart="10dp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="30dp">
            <TextView
                style="@style/mainTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/design"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:layout_marginStart="10dp"/>
            <TextView
                style="@style/mainTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Yulia Belyaeva"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:layout_marginStart="10dp"/>
        </LinearLayout>
    </LinearLayout>


</FrameLayout>