<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@mipmap/background_main">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/materialTextView"
        style="@style/mainTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:includeFontPadding="false"
        android:text="@string/select_difficulty"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/easyline"
        style="@style/linerButtonStyle"
        android:orientation="vertical"
        android:background="@drawable/easy_btn"
        android:layout_marginTop="100dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/materialTextView">
        <com.google.android.material.textview.MaterialTextView
            style="@style/mainTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/easy"
            android:textSize="32sp"
            android:layout_marginTop="10dp"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <com.google.android.material.textview.MaterialTextView
                style="@style/mainTextStyle"
                android:id="@+id/easy_levels_complete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:includeFontPadding="false"
                android:text="1"
                android:textSize="14sp"/>

            <com.google.android.material.textview.MaterialTextView
                style="@style/mainTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:includeFontPadding="false"
                android:text="/"
                android:textSize="12sp" />
            <com.google.android.material.textview.MaterialTextView
                style="@style/mainTextStyle"
                android:id="@+id/easy_levels_total"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:includeFontPadding="false"
                android:text="6"
                android:textSize="14sp"/>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/mediumline"
        style="@style/linerButtonStyle"
        android:orientation="vertical"
        android:background="@drawable/medium_btn"
        android:layout_marginTop="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/easyline">
        <com.google.android.material.textview.MaterialTextView
            style="@style/mainTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/medium"
            android:textSize="32sp"
            android:layout_marginTop="10dp"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <com.google.android.material.textview.MaterialTextView
                style="@style/mainTextStyle"
                android:id="@+id/medium_levels_complete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:includeFontPadding="false"
                android:text="1"
                android:textSize="14sp"/>
            <com.google.android.material.textview.MaterialTextView
                style="@style/mainTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:includeFontPadding="false"
                android:text="/"
                android:textSize="12sp"/>
            <com.google.android.material.textview.MaterialTextView
                style="@style/mainTextStyle"
                android:id="@+id/medium_levels_total"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:includeFontPadding="false"
                android:text="6"
                android:textSize="14sp"/>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/hardline"
        style="@style/linerButtonStyle"
        android:orientation="vertical"
        android:background="@drawable/hard_btn"
        android:layout_marginTop="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mediumline">
        <com.google.android.material.textview.MaterialTextView
            style="@style/mainTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hard"
            android:textSize="32sp"
            android:layout_marginTop="10dp"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <com.google.android.material.textview.MaterialTextView
                style="@style/mainTextStyle"
                android:id="@+id/hard_levels_complete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:includeFontPadding="false"
                android:text="1"
                android:textSize="14sp"/>
            <com.google.android.material.textview.MaterialTextView
                style="@style/mainTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:includeFontPadding="false"
                android:text="/"
                android:textSize="12sp"/>
            <com.google.android.material.textview.MaterialTextView
                style="@style/mainTextStyle"
                android:id="@+id/hard_levels_total"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:includeFontPadding="false"
                android:text="6"
                android:textSize="14sp"/>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/hardline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">
        <Button
            android:id="@+id/info_btn"
            style="@style/mainButtonStyle"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/info_btn"/>
        <Button
            android:id="@+id/sound_btn"
            style="@style/mainButtonStyle"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:background="@drawable/sound_btn"/>
        <Button
            android:id="@+id/share_btn"
            style="@style/mainButtonStyle"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/share_btn"/>


    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>